# my_robot

./: README.md
bot_control/: CMakeLists.txt  package.xml
bot_control/config/: laser_view.rviz
bot_control/launch/: laser_scan.launch.py
bot_control/src/: reading_laser.cpp
bot_spawn/: CMakeLists.txt  package.xml
bot_spawn/launch/: control.launch.py  gazebo.launch.py  rsp.launch.py  rviz.launch.py
bot_spawn/robot/: camera.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
bot_world/: CMakeLists.txt  package.xml
bot_world/launch/: bot_empty_world.launch.py  bot_test_world.launch.py
bot_world/worlds/: test.world
